sandc/test/fixtures/astRegression/shouldFail/productions/statement/UnsyntacticYield.sand
pub class UnsyntacticYield {
    foo() {
        yield bar;
    }
}